HW_2/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw-2-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hw-2
  template:
    metadata:
      labels:
        app: hw-2
    spec:
      containers:
      - name: hw1
        image: docker.io/alexandruz/avostapenko:hw0.1
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 3
        ports:
        - containerPort: 8000
