HW_2/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hw-2-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: hw-2
