HW_2/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /health
  name: ingress-hw2
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /otusapp/.*/.*
        pathType: ImplementationSpecific
        backend:
          service: 
            name: hw-2-service
            port: 
              number: 80
  ingressClassName: nginx
